# MyWardrobeHelper

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTED.md  README.md  TODO.md
.codex/: config.toml.example
assets/: app.css  item-analysis.js
docs/: API.md  CODEX_SETUP.md  GITHUB_GUIDE.md  IOS.md  MCP.md  README.md  TAGS.md
ios/: README.md
ios/MyWardrobeHelperiOS/MyWardrobeHelperiOS/MyWardrobeHelperiOS/: ContentView.swift  MyWardrobeHelperiOSApp.swift
ios/MyWardrobeHelperiOS/MyWardrobeHelperiOS/MyWardrobeHelperiOS.xcodeproj/: project.pbxproj
ios/MyWardrobeHelperiOS/MyWardrobeHelperiOS/MyWardrobeHelperiOS/Features/Connection/: ConnectionView.swift  ConnectionViewModel.swift
ios/MyWardrobeHelperiOS/MyWardrobeHelperiOS/MyWardrobeHelperiOS/Models/: APIModels.swift  ServerProfile.swift
ios/MyWardrobeHelperiOS/MyWardrobeHelperiOS/MyWardrobeHelperiOS/Networking/: APIClient.swift  MediaUploadClient.swift
ios/MyWardrobeHelperiOS/MyWardrobeHelperiOS/MyWardrobeHelperiOS/Services/: ServerProfileStore.swift  TagScannerService.swift
migrations/: 0001_initial_schema.sql
openapi/: openapi.json
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs
src/app/: mod.rs
src/db/: mod.rs
src/domain/: mod.rs
src/infra/: codex_item_analyzer.rs  media_storage.rs  mod.rs
src/mcp/: mod.rs
src/repositories/: mod.rs  sqlite.rs
src/services/: mod.rs
src/web/: mod.rs
templates/: base.html  home.html  item_detail.html  item_form.html  items.html  locations.html  status.html  trip_detail.html  trips.html
tests/: schema_init.rs
(+7 files in other folders)
