[package]
name = "mywardrobehelper"
version = "0.1.0"
edition = "2024"
description = "Local-first wardrobe management system with a single Rust backend and native iOS companion app"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.6", features = ["multipart"] }
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "io-util"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
